--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ Flask==3.0.2
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
-Werkzeug==3.0.1
-python-dotenv==1.0.1
+Flask-Mail==0.9.1
+Flask-Migrate==4.1.0
 email-validator==2.1.0.post1
+python-dotenv==1.0.1
 reportlab==4.1.0
 pdfkit==1.0.0
-SQLAlchemy==2.0.28
-gunicorn==21.2.0 
+gunicorn==21.2.0
+Werkzeug==3.0.1
+itsdangerous==2.2.0 
