--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
 *.pyc
 __pycache__/
-instance/
 venv/
 *.db
 .env
-.DS_Store 
+.DS_Store
+instance/
+.pytest_cache/
+.coverage
+htmlcov/
+dist/
+build/
+*.egg-info/
+.idea/
+.vscode/
+*.log 
